Changed resources for chat
