# backend/app_chat/serializers/get_chat.go
@@ -1,15 +1,16 @@
 package serializers
 
 import (
+	"github.com/google/uuid"
 	validate "github.com/gobuffalo/validate/v3"
 )
 
 
 // входные данные для получения чата для двух юзеров и сообщений из этого чата
-type GetMessagesIn struct {
-	// логин собеседника
-	Username string `param:"username" myvalid:"required" example:"boris_2007"`
+type GetChatIn struct {
+	// id чата
+	ID uuid.UUID `param:"id" myvalid:"required" example:"0aafe1fd-0088-455b-9269-0307aae15bcc"`
 }
 
 // дополнительная валидация входных данных
-func (self *GetMessagesIn) IsValid(errors *validate.Errors) {}
+func (self *GetChatIn) IsValid(errors *validate.Errors) {}
