# backend/app_user/handlers/register.go
@@ -22,9 +22,9 @@ import (
 //	@Produce		json
 //	@Param			RegisterUserIn	body		serializers.RegisterUserIn	true	"Register params"
 //	@Success		201				{object}	models.User
-//	@Failure		400				{object}	errors.UserRegister400
-//	@Failure		409				{object}	errors.UserRegister409
-//	@Failure		500				{object}	errors.General500
+//	@Failure		400				{object}	errors.GeneralValidateError400
+//	@Failure		409				{object}	errors.UserRegusterAlreadyExistsError409
+//	@Failure		500				{object}	errors.GeneralInternalError500
 func Register(context echo.Context) error {
 	var err error
 	var dataIn serializers.RegisterUserIn
